Update issue templates

--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -7,6 +7,11 @@ assignees: ''
 
 ---
 
+1. 填写标题
+2. 参考完整的例子填写下方的参数
+3. 在issue的最后上传图片
+
+```
 {
   id: 'maoquanji1', // 来源文件的唯一标识，必填
   source: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
@@ -19,6 +24,7 @@ assignees: ''
     },
   ],
 }
+```
 ```
 完整的例子：
 {
@@ -57,4 +63,5 @@ assignees: ''
   },
 }
 ```
+
 [此处上传图片]
