--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -9,42 +9,50 @@ assignees: ''
 
 1. 填写标题
 2. 参考完整的例子填写下方的参数
-3. 在issue的最后上传图片
+3. 在issue的最后上传图片，目前仅支持jpg格式
 
 ```
 {
   id: 'maoquanji1', // 来源文件的唯一标识，必填
-  source: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
-  authors: ['毛泽东', '江青'], // 作者
-  dates: [
-    {
-      year: 1949,
-      month: 10,
-      day: 1,
-    },
-  ],
+  source_name: '毛泽东全集第一卷', // 来源文件名称，书籍，数据库，报纸等等
+  articles: [{
+    title: '在中央政治局会议上的讲话',
+    authors: ['毛泽东', '江青'], // 作者
+    dates: [
+      {
+        year: 1949,
+        month: 10,
+        day: 1,
+      },
+    ],
+  }]
 }
 ```
 ```
 完整的例子：
 {
   id: 'maoquanji1', // 来源文件的唯一标识，必填
-  source: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
-  authors: ['毛泽东', '江青'], // 作者
-  dates: [
-    {
-      year: 1949,
-      month: 10,
-      day: 1,
-    },
-    {
-      year: 1976,
-      month: 10,
-      day: 1,
-    },
-  ], // 时间 或者 时间范围 或者 多个时间点
-  is_range_date: false, // 如果为 true 表示一段时间（从49年到76年），如果为false表示多/单个时间点
-  alias: '', // 标题别名
+  source_name: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
+  articles: [{
+    title: '在中央政治局会议上的讲话',
+    authors: ['毛泽东', '江青'], // 作者
+    dates: [
+      {
+        year: 1949,
+        month: 10,
+        day: 1,
+      },
+      {
+        year: 1976,
+        month: 10,
+        day: 1,
+      },
+    ], // 时间 或者 时间范围 或者 多个时间点
+    is_range_date: false, // 如果为 true 表示一段时间（从49年到76年），如果为false表示多/单个时间点
+    alias: '', // 标题别名
+    page_start: 1, // 从图片集第一张到第五张，如果不填表示从第一张到最后一张
+    page_end: 5,
+  }],
   ocr: { // ocr 参数 以及 默认参数
     rec_model: 'ch_ppocr_mobile_v2.0',
     rec_backend: 'onnx',
@@ -53,14 +61,17 @@ assignees: ''
     resized_shape: 1496,
     box_score_thresh: 0.3,
     min_box_size: 10,
-    ignore_page_border: [0.1, 0.1, 0.1, 0.1], // 通常在页面边缘含有页眉页码，需要忽略，顺序为上下左右，单位为相对于宽高的比例 0.1表示百分之10
-    exceptions: {
-      "3": {
-        ignore_page_border: [0.2, 0.2, 0.1, 0.1],
-        // ...其他ocr参数
-      },
-    } // 例外， 比如第三页的ocr参数与其他页面不同，默认为空
+    content_thresholds: [0.1, 0.1, 0.1, 0.1]; // 通常需要忽略在页面边缘的页眉，页码或者噪声，数组内4个数值分别表示上下左右相对于宽高的比例， 例如 [0.1,0,0,0] 表示忽略顶部占总高度百分之10的内容
+    line_merge_threshold: 30; // 单位像素，如果小于这个阈值将被视为同一行
+    standard_paragraph_merge_strategy_threshold: 0; // 标准段落合并策略，超过 threshold * width 的表示新段落，否则向上合并
+    differential_paragraph_merge_strategy_threshold: 30; // 差分段落合并策略，x[i] - x[i-1] > threshold 的表示新段落，否则向上合并，单位像素
   },
+  ocr_exceptions: {
+    "3": {
+      content_thresholds: [0.2, 0.2, 0.1, 0.1],
+      // ...其他ocr参数（可选）
+    },
+  } // 例外， 比如第三页的ocr参数与其他页面不同，默认为空
 }
 ```
 
