--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -7,7 +7,7 @@ assignees: ''
 
 ---
 
-1. 填写标题
+1. 填写标题（注意issue的标题仅用于展示，自动化录入程序以下方参数中的title为准）
 2. 参考完整的例子填写下方的参数
 3. 在issue的最后上传图片，请保持图片格式的统一，全使用jpg或者全使用png
 
