--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -8,10 +8,11 @@ assignees: ''
 ---
 
 1. 填写标题（注意issue的标题仅用于展示，自动化录入程序以下方参数中的title为准）
-2. 参考完整的例子填写下方的参数
+2. 参考完整的例子填写下方的参数，可以使用cnocr的在线页面调试不同参数 https://huggingface.co/spaces/breezedeus/cnocr
 3. 在issue的最后上传图片，请保持图片格式的统一，全使用jpg或者全使用png
 
 ```
+必填内容：
 {
   id: 'maoquanji1', // 来源文件的唯一标识，必填
   source_name: '毛泽东全集第一卷', // 来源文件名称，书籍，数据库，报纸等等
@@ -61,7 +62,7 @@ assignees: ''
     resized_shape: 1496,
     box_score_thresh: 0.3,
     min_box_size: 10,
-    content_thresholds: [0.1, 0.1, 0.1, 0.1]; // 通常需要忽略在页面边缘的页眉，页码或者噪声，数组内4个数值分别表示上下左右相对于宽高的比例， 例如 [0.1,0,0,0] 表示忽略顶部占总高度百分之10的内容
+    content_thresholds: [0.0, 0.0, 0.0, 0.0]; // 通常需要忽略在页面边缘的页眉，页码或者噪声，数组内4个数值分别表示上下左右相对于宽高的比例， 例如 [0.1,0,0,0] 表示忽略顶部占总高度百分之10的内容
     line_merge_threshold: 30; // 单位像素，如果小于这个阈值将被视为同一行
     standard_paragraph_merge_strategy_threshold: 0; // 标准段落合并策略，超过 threshold * width 的表示新段落，否则向上合并
     differential_paragraph_merge_strategy_threshold: 30; // 差分段落合并策略，x[i] - x[i-1] > threshold 的表示新段落，否则向上合并，单位像素
