--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -7,30 +7,13 @@ assignees: ''
 
 ---
 
-1. 填写标题（注意issue的标题仅用于展示，自动化录入程序以下方参数中的title为准）
-2. 参考完整的例子填写下方的参数，可以使用cnocr的在线页面调试不同参数 https://huggingface.co/spaces/breezedeus/cnocr
-3. 在issue的最后上传图片，请保持图片格式的统一，全使用jpg或者全使用png
+**===== 使用说明=====**
 
+1. 填写标题（注意issue的标题仅用于展示，自动化录入程序以下方参数中的title为准）
+2. 参考完整的例子（）填写下方的参数，可以使用cnocr的在线页面调试不同参数 https://huggingface.co/spaces/breezedeus/cnocr
+
+完整的例子:
 ```
-必填内容：
-{
-  id: 'maoquanji1', // 来源文件的唯一标识，必填
-  source_name: '毛泽东全集第一卷', // 来源文件名称，书籍，数据库，报纸等等
-  articles: [{
-    title: '在中央政治局会议上的讲话',
-    authors: ['毛泽东', '江青'], // 作者
-    dates: [
-      {
-        year: 1949,
-        month: 10,
-        day: 1,
-      },
-    ],
-  }]
-}
-```
-```
-完整的例子：
 {
   id: 'maoquanji1', // 来源文件的唯一标识，必填
   source_name: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
@@ -76,4 +59,26 @@ assignees: ''
 }
 ```
 
-[此处上传图片]
+3. 在issue的最后上传图片，请保持图片格式的统一，全使用jpg或者全使用png
+
+**===== 以上为使用说明 =====**
+
+```
+{
+  id: 'maoquanji1', // 来源文件的唯一标识
+  source_name: '毛泽东全集第一卷', // 来源文件名称，书籍，数据库，报纸等等
+  articles: [{
+    title: '在中央政治局会议上的讲话',
+    authors: ['毛泽东', '江青'], // 作者
+    dates: [
+      {
+        year: 1949,
+        month: 10,
+        day: 1,
+      },
+    ],
+  }]
+}
+```
+
+<此处上传图片>
