--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -7,10 +7,12 @@ assignees: ''
 
 ---
 
-**===== 使用说明=====**
+**===== 自动化文稿录入使用说明 =====**
+
+按照以下标准进行自动化文稿录入，随后机器人会生成对应的pull request，通过审核后将会生成对应文稿页面。
 
 1. 填写标题（注意issue的标题仅用于展示，自动化录入程序以下方参数中的title为准）
-2. 参考完整的例子（）填写下方的参数，可以使用cnocr的在线页面调试不同参数 https://huggingface.co/spaces/breezedeus/cnocr
+2. 参考完整的例子（）填写issue最下方的参数，可以使用cnocr的在线页面调试不同参数 https://huggingface.co/spaces/breezedeus/cnocr
 
 完整的例子:
 ```
