--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -19,6 +19,7 @@ assignees: ''
 {
   id: 'maoquanji1', // 来源文件的唯一标识，必填
   source_name: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
+  archive_id: 1, // 子仓库id，banned-historical-archives[id]，默认为 1
   articles: [{
     title: '在中央政治局会议上的讲话',
     authors: ['毛泽东', '江青'], // 作者
