--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -35,7 +35,7 @@ assignees: ''
         day: 1,
       },
     ], // 时间 或者 时间范围 或者 多个时间点
-    is_range_date: false, // 如果为 true 表示一段时间（从49年到76年），如果为false表示多/单个时间点
+    is_range_date: false, // 默认为false，如果为 true 表示一段时间（从49年到76年），如果为false表示多/单个时间点
     alias: '', // 标题别名
     page_start: 1, // 从图片集第一张到第五张，如果不填表示从第一张到最后一张
     page_end: 5,
@@ -64,7 +64,7 @@ assignees: ''
 
 3. 在issue的最后上传图片，请保持图片格式的统一，全使用jpg或者全使用png
 
-**===== 以上为使用说明 =====**
+**===== 以上为使用说明(建议删除) =====**
 
 ```
 {
