--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -62,7 +62,7 @@ assignees: ''
 }
 ```
 
-3. 在issue的最后上传图片，请保持图片格式的统一，全使用jpg或者全使用png
+3. 在issue的最后上传图片或pdf。如果上传图片请保持图片格式的统一，全使用jpg或者全使用png。如果上传pdf，目前只能接受单个pdf文件。多个pdf建议合并后再上传。
 
 **===== 以上为使用说明(建议删除) =====**
 
@@ -84,4 +84,4 @@ assignees: ''
 }
 ```
 
-<此处上传图片>
+<此处上传图片/pdf>
