--- a/.github/ISSUE_TEMPLATE/自动化文稿录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化文稿录入.md
@@ -45,7 +45,7 @@ assignees: ''
     rec_backend: 'onnx',
     det_model: 'ch_PP-OCRv3_det',
     det_backend: 'onnx',
-    resized_shape: 1496,
+    resized_shape: 1496, // 在OCR前resize到这个尺寸，这个参数仅影响识别效果，识别结果的坐标仍是取决于原图像尺寸
     box_score_thresh: 0.3,
     min_box_size: 10,
     content_thresholds: [0.0, 0.0, 0.0, 0.0]; // 通常需要忽略在页面边缘的页眉，页码或者噪声，数组内4个数值分别表示上下左右相对于宽高的比例， 例如 [0.1,0,0,0] 表示忽略顶部占总高度百分之10的内容
