feat: image source

--- a/.github/ISSUE_TEMPLATE/自动化多媒体录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化多媒体录入.md
@@ -23,6 +23,7 @@ assignees: ''
       type: 'img', // 多媒体类型，图片为img，音乐为music
       name: '接见红卫兵', // 名称，可重名
       description: '', // 描述
+      source: '未知', // 来源
       show_in_gallery: true, // 图片类型特有的属性。表示图片是否需要展示在图库中，而不仅仅作为插图。
       tags: [{
         type: 'character', // 类型 character, place, subject(主题/事件)
