--- a/.github/ISSUE_TEMPLATE/自动化录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化录入.md
@@ -1,7 +1,7 @@
 ---
-name: 自动化文稿录入
-about: 自动化文稿录入
-title: '[自动化文稿录入]标题'
+name: 自动化录入
+about: 自动化录入
+title: '[自动化录入]标题'
 labels: ''
 assignees: ''
 ---
@@ -18,6 +18,7 @@ assignees: ''
 ```
 {
   source_name: '毛泽东全集第一卷', // 来源文件，书籍，数据库，报纸等等
+  resource_type: 'book', // book, video, audio, picture
   author: '', // 出版社
   archive_id: 18, // 子仓库id，banned-historical-archives[id]
   articles: [{
@@ -85,6 +86,7 @@ assignees: ''
 
 ```
 {
+  resource_type: 'book',
   source_name: '毛泽东全集第一卷', // 来源文件名称，书籍，数据库，报纸等等
   author: '',
   archive_id: 18,
