--- a/.github/ISSUE_TEMPLATE/自动化录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化录入.md
@@ -8,7 +8,9 @@ assignees: ''
 
 **===== 自动化文稿录入使用说明 =====**
 
-按照以下标准进行自动化文稿录入，随后机器人会生成对应的 pull request，通过审核后将会生成对应文稿页面。
+按照以下标准进行自动化文稿/音乐/图片/视频录入，随后机器人会生成对应的 pull request，通过审核后将会生成对应文稿/音乐/图片/视频页面。
+
+# 文稿类型
 
 1. 填写标题（注意 issue 的标题仅用于展示，自动化录入程序以下方参数中的 title 为准）
 2. 参考完整的例子（）填写 issue 最下方的参数，可以使用 cnocr 的在线页面调试不同参数 https://huggingface.co/spaces/breezedeus/cnocr
@@ -82,6 +84,56 @@ assignees: ''
 
 3. 在 issue 的最后上传图片或 pdf。如果上传图片请保持图片格式的统一，全使用 jpg 或者全使用 png。如果上传 pdf，目前只能接受单个 pdf 文件。多个 pdf 建议合并后再上传。
 
+# 音乐类型
+
+```
+{
+  resource_type: 'music',
+  archive_id: 1, // 子仓库id，banned-historical-archives[id]
+  name: '名称',
+  composer: '作曲家',
+  description: '描述',
+  lyrics: [{
+    lyricist: '作词',
+    version: '版本',
+    content: '歌词内容，用\n表示换行',
+    audios: [{
+      source: '来源信息，例如：mzdbl网站',
+      artist: '演唱者',
+    }], // 多个用逗号分开
+  }], // 多个用逗号分开
+}
+```
+
+# 图片类型
+
+```
+{
+  resource_type: 'picture',
+  archive_id: 1, // 子仓库id，banned-historical-archives[id]
+  name: '名称',
+  description: '描述',
+  source: '来源，例如：新华社',
+  year: 1999, // 选填
+  month: 10, // 选填
+  day: 1, // 选填
+  tags: [{name: '标签名称', type: '标签大类'}],
+}
+```
+
+# 视频类型
+
+{
+  resource_type: 'video',
+  archive_id: 1, // 子仓库id，banned-historical-archives[id]
+  name: '名称',
+  description: '描述',
+  source: '来源，例如：新华社',
+  year: 1999, // 选填
+  month: 10, // 选填
+  day: 1, // 选填
+  tags: [{name: '标签名称', type: '标签大类'}],
+}
 **===== 以上为使用说明(建议删除) =====**
 
 ```
@@ -106,4 +158,4 @@ assignees: ''
 }
 ```
 
-<此处按顺序上传图片/pdf。如果超过 25mb 可以先上传到自己的仓库，然后在这里用 markdown 填写文件的 url>
+<此处按顺序上传图片/pdf/音乐/视频。如果超过 25mb 可以先上传到自己的仓库，然后在这里用 markdown 填写文件的 url>
