--- a/.github/ISSUE_TEMPLATE/自动化录入.md
+++ b/.github/ISSUE_TEMPLATE/自动化录入.md
@@ -58,13 +58,13 @@ assignees: ''
   }],
   ocr: { // ocr 参数 以及 默认参数
     extract_text_from_pdf: false, // 默认为false，如果pdf已经有文本信息就可以设置为true跳过OCR
-    rec_model: 'ch_ppocr_mobile_v2.0',
-    rec_backend: 'onnx',
-    det_model: 'ch_PP-OCRv3_det',
-    det_backend: 'onnx',
-    resized_shape: 1496, // 在OCR前resize到这个尺寸，这个参数仅影响识别效果，识别结果的坐标仍是取决于原图像尺寸
-    box_score_thresh: 0.3,
-    min_box_size: 10,
+
+    rec_model_dir: './paddle/ch_PP-OCRv4_rec_infer',
+    det_model_dir: './paddle/ch_PP-OCRv4_det_infer',
+    det_limit_side_len: 2496, // 在OCR前resize到这个尺寸，这个参数仅影响识别效果，识别结果的坐标仍是取决于原图像尺寸
+    drop_score: 0.3,
+    det_db_box_thresh: 0.2,
+
     auto_vsplit: true, // 用于分页或者处理特殊的排版。如果为 ture，当页面宽度大于高度时，将ocr结果中页面中间(vsplit的位置)分开
     vsplit: 0.5, // 如果设置为0.5，ocr结果将从页面宽度的50%处分割，如果为0表示不分割。当auto_vsplit为false且vsplit不为0时，表示任何页面都进行分割。
     content_thresholds: [0.0, 0.0, 0.0, 0.0], // 通常需要忽略在页面边缘的页眉，页码或者噪声，数组内4个数值分别表示上下左右相对于宽高的比例， 例如 [0.1,0,0,0] 表示忽略顶部占总高度百分之10的内容
